- Added editor stylesheet.
- Added placeholder images to sample site.
- Updated Xindi logo.
- Fixed bug preventing navigation links with sub pages from working.