@@ -7,5 +7,14 @@ jQuery(function($) {
 	});
 	
 	$(".alert").alert();
+	
+	// toggle meta tag form fields
+	$('#meta_generated').click(function() {
+	    if( $(this).is(':checked')) {
+	        $("#meta_tags").slideUp();
+	    } else {
+	        $("#meta_tags").slideDown();
+	    }
+	}); 	
 
 });
