@@ -2,3 +2,4 @@
 - Added placeholder images to sample site.
 - Updated Xindi logo.
 - Fixed bug preventing navigation links with sub pages from working.
+- Hide meta tag form fields when generate meta tags automatically is selected.
